--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-intersection-observer": "latest",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "resend": "^4.1.2",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -73,8 +74,6 @@
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "eslint": "9.22.0",
     "eslint-config-next": "15.2.1",
     "postcss": "^8",
